# EPC_project

./: pyproject.toml
epc_project_kedro/: README.md  pyproject.toml
epc_project_kedro/conf/base/: catalog.yml
epc_project_kedro/docs/source/: conf.py  index.rst
epc_project_kedro/src/: setup.py
epc_project_kedro/src/epc_project_kedro/: __init__.py  __main__.py  settings.py
epc_project_kedro/src/tests/: test_run.py
