[tool.poetry]
name = "epc-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "epc_project"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
kedro = "0.18.4"
numpy = "1.24.2"
pyspark = " 3.3.2"
pandas = "1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

